--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "console": "babel-node server/index.js console",
     "server": "babel-node server/index.js",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "db:init": "sequelize init",
+    "db:create": "sequelize migration:create",
+    "db:migrate": "sequelize db:migrate",
+    "db:undo": "sequelize db:migrate:undo"
   },
   "repository": {
     "type": "git",
@@ -24,7 +28,10 @@
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
-    "sequelize": "^3.30.1"
+    "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.30.1",
+    "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
