--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "console": "babel-node server/index.js console",
     "server": "babel-node server/index.js",
     "start": "nodemon server/index.js",
-    "db:init": "sequelize init",
     "db:create": "sequelize migration:create",
     "db:migrate": "sequelize db:migrate",
     "db:undo": "sequelize db:migrate:undo"
@@ -28,8 +27,10 @@
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
+    "koa-views": "^6.0.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
+    "pug": "^2.0.0-beta11",
     "sequelize": "^3.30.1",
     "sequelize-cli": "^2.7.0"
   },
