--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "console": "babel-node server/index.js console",
     "server": "babel-node server/index.js",
-    "start": "nodemon server/index.js",
-    "dev": "cross-env NODE_ENV=development && npm run start",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js",
     "db:create": "sequelize migration:create",
     "db:migrate": "sequelize db:migrate",
     "db:undo": "sequelize db:migrate:undo"
