--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
     "koa-router": "^7.1.1",
-    "koa-views": "^6.0.1",
+    "koa-static": "^3.0.0",
+    "koa-views": "6.0.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-beta11",
@@ -35,16 +36,17 @@
     "sequelize-cli": "^2.7.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.7",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-cli": "^6.18.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.7",
-    "babel-register": "^6.9.0",
+    "babel-register": "^6.24.1",
+    "cross-env": "^5.0.0",
     "nodemon": "^1.11.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
